--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Prepare release
+name: Release new version of chainprof
 
 on:
     push:
@@ -32,11 +32,7 @@ jobs:
                 arch: ["386", "amd64", "arm64"]
                 exclude:
                     - os: "darwin"
-                      arch: "arm"
-                    - os: "darwin"
                       arch: "386"
-                    - os: "windows"
-                      arch: "arm"
         steps:
             - uses: actions/setup-go@v2
               with:
