--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,6 @@ name: Release new version of chainprof
 
 on:
     push:
-        tags:
-            - "v*"
 
 jobs:
     create_release:
@@ -43,15 +41,16 @@ jobs:
                   GOOS: ${{ matrix.os }}
                   GOARCH: ${{ matrix.arch }}
               run: |
-                  BUILD_DIR="${{ github.ref_name }}-${GOOS}-${GOARCH}"
-                  EXTENSION=""
-                  if [ "$GOOS" = "windows" ]; then
-                    EXTENSION=".exe"
-                  fi
-                  mkdir "$BUILD_DIR"
-                  cp README.md "$BUILD_DIR/README.md"
-                  go build -o "$BUILD_DIR/chainprof${EXTENSION}" ./cmd/chainprof
-                  zip -r "$BUILD_DIR.zip" "$BUILD_DIR"
+                  ls ./
+                  #BUILD_DIR="${{ github.ref_name }}-${GOOS}-${GOARCH}"
+                  #EXTENSION=""
+                  #if [ "$GOOS" = "windows" ]; then
+                  #  EXTENSION=".exe"
+                  #fi
+                  #mkdir "$BUILD_DIR"
+                  #cp README.md "$BUILD_DIR/README.md"
+                  #go build -o "$BUILD_DIR/chainprof${EXTENSION}" ./cmd/chainprof
+                  #zip -r "$BUILD_DIR.zip" "$BUILD_DIR"
             - name: Upload release asset for each valid (GOOS, GOARH) pair
               uses: actions/upload-release-asset@v1
               env:
