--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
             - uses: actions/setup-go@v2
               with:
                   go-version: ^1.20.0
-            - run: ls
+            - run: "echo $PWD"
             - name: Build binary for each valid (GOOS, GOARCH) pair
               env:
                   GOOS: ${{ matrix.os }}
