--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,8 @@ name: Release new version of chainprof
 
 on:
     push:
+        tags:
+            - 'v*'
 
 jobs:
     create_release:
@@ -32,10 +34,10 @@ jobs:
                     - os: "darwin"
                       arch: "386"
         steps:
+            - uses: actions/checkout@v2
             - uses: actions/setup-go@v2
               with:
                   go-version: ^1.20.0
-            - run: "echo $PWD"
             - name: Build binary for each valid (GOOS, GOARCH) pair
               env:
                   GOOS: ${{ matrix.os }}
