--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
                   tag_name: ${{ github.ref }}
-                  release_name: "${{ github.ref_name }}"
+                  release_name: "chainprof ${{ github.ref_name }}"
                   body: |
                       Version ${{ github.ref_name }}.
                   draft: true
